refactor code for separation of concerns
